# cc-analysis

./: .env.example  .gitignore  CHANGELOG.md  README.md  convert_ico.py  license  pyproject.toml  release-note.md  requirements.txt  setup.cfg
.github/workflows/: python-app.yml
cc_analysis/: __init__.py  __main__.py  about.txt  bank_detector.py  bank_statement_parser.py  categories.json  categorizer.py  constants.py  db.py  excel_summary.py  extractors.py  gui.py  help.txt  read_db.py  transactions.db  utils.py
tests/: README.md  __init__.py  get_mock_statement.py  test_categorizer.py  test_core.py  test_extractor.py  test_skipped_log.py  test_utils.py
