[project]
name = "cc-analysis"
version = "0.1.0"
description = "A GUI tool to extract and consolidate credit card statements (HDFC and IndusInd) into Excel."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
  { name = "Senthil", email = "you@example.com" }
]

dependencies = [
  "pdfplumber>=0.10.2",
  "pandas>=1.3",
  "openpyxl>=3.0",
  "tk"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
