[metadata]
name = cc-analysis
version = 0.1.0
description = A GUI tool to extract and consolidate credit card statements (HDFC and IndusInd) into Excel.
long_description = file: README.md
long_description_content_type = text/markdown
author = Senthil
author_email = senthilrom@gmail.com
license = MIT
license_files = LICENSE
url = https://github.com/senthilrom/cc-analysis
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    pdfplumber>=0.10.2
    pandas>=1.3
    openpyxl>=3.0

[options.package_data]
* = help.txt, about.txt, README.md

[options.entry_points]
console_scripts =
    cc-analysis = cc_analysis.__main__:main

